# Anime_carousel

./: README.md
Anime_Template_Project/LoadingAnime/: Bouncing_Ball_Loading.h  CMakeLists.txt  Rectangle_Loading.h  Square_Pseudo_Bounce_Loading.cpp  Square_Pseudo_Bounce_Loading.h  black_white_ball_loading.cpp  black_white_ball_loading.h  bouncing_ball_loading.cpp  hexagonloaderwidget.cpp  hexagonloaderwidget.h  line_loading.cpp  line_loading.h  line_rotating_along_rectangular_border.cpp  line_rotating_along_rectangular_border.h  rectangle_loading.cpp  regular_loading.cpp  regular_loading.h  ring_loading.cpp  ring_loading.h  widget.cpp  widget.h
Anime_Template_Project/Particle_Generation/: CMakeLists.txt  ParticleWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  particlewidget.cpp
